Add link to nasigoreng.html in index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Nusantara Recipes</h1>
+    <a href="./recipes/nasigoreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
   </body>
 </html>
