Add description & ingredients item to nasigoreng.html

--- a/recipes/nasigoreng.html
+++ b/recipes/nasigoreng.html
@@ -1,1 +1,29 @@
 <h1>Nasi Goreng (Indonesian Fried Rice)</h1>
+<img src="../images/nasigoreng.jpg" alt="nasi goreng, indonesian fried rice" width="640px" height="360px">
+<h3>A traditional Indonesian food, all time favorite!</h3>
+<p>What else better than Nasi Goreng? Make your own now.</p>
+<p>Taste great when served immediately, don't forget to use fine and fresh ingredients.</p>
+<div>
+  <h4>Ingredients</h4>
+  <ul>
+    <li>Cooking spray</li>
+    <li>3 large eggs, beaten</li>
+    <li>1 tablespoon vegetable oil</li>
+    <li>1 onion, chopped</li> 
+    <li>1 leek, chopped</li>
+    <li>2 green chile peppers, chopped</li>
+    <li>1 clove garlic, minced</li>
+    <li>½ pound skinless, boneless chicken breasts, cut into thin strips</li>
+    <li>½ pound peeled and deveined shrimp</li>
+    <li>1 teaspoon ground coriander</li>
+    <li>1 teaspoon ground cumin</li>
+    <li>3 cups cold cooked white rice</li>
+    <li>3 tablespoons kecap manis (sweet soy sauce)</li>
+  </ul>
+</div>
+<div>
+  <h4>Recipe instructions</h4>
+  <ol>
+    
+  </ol>
+</div>
