--- a/recipes/nasigoreng.html
+++ b/recipes/nasigoreng.html
@@ -6,24 +6,23 @@
 <div>
   <h4>Ingredients</h4>
   <ul>
-    <li>Cooking spray</li>
-    <li>3 large eggs, beaten</li>
-    <li>1 tablespoon vegetable oil</li>
-    <li>1 onion, chopped</li> 
-    <li>1 leek, chopped</li>
-    <li>2 green chile peppers, chopped</li>
-    <li>1 clove garlic, minced</li>
-    <li>½ pound skinless, boneless chicken breasts, cut into thin strips</li>
-    <li>½ pound peeled and deveined shrimp</li>
-    <li>1 teaspoon ground coriander</li>
-    <li>1 teaspoon ground cumin</li>
-    <li>3 cups cold cooked white rice</li>
-    <li>3 tablespoons kecap manis (sweet soy sauce)</li>
+    <li>4 plates of white rice</li>
+    <li>200 grams of shrimp, fried</li>
+    <li>100 grams of chicken breast, diced, fried</li>
+    <li>2 red chilies, remove the contents, sliced diagonally</li> 
+    <li>2 tablespoons soy sauce</li>
+    <li>2 tablespoons tomato sauce</li>
+    <li>Butter to taste</li>
+    <li>5 spring onions</li>
+    <li>3 cloves of garlic</li>
+    <li>1 teaspoon salt</li>
+    <li>1/2 teaspoon sugar</li>
+    <li>1/2 teaspoon shrimp paste</li>
   </ul>
 </div>
 <div>
   <h4>Recipe instructions</h4>
   <ol>
-    
+
   </ol>
 </div>
