Add directions to nasigoreng.html

--- a/recipes/nasigoreng.html
+++ b/recipes/nasigoreng.html
@@ -21,8 +21,10 @@
   </ul>
 </div>
 <div>
-  <h4>Recipe instructions</h4>
+  <h4>Directions</h4>
   <ol>
-
+    <li>Heat the butter, then add the spices that have been smoothed and red pepper, then cook until fragrant.</li>
+    <li>Add rice, chicken and shrimp, then stir until smooth and all the ingredients are mixed together perfectly.</li>
+    <li>Remove and the special fried rice is ready to serve while warm.</li>
   </ol>
 </div>
