Add return to main page in nasigoreng.html

--- a/recipes/nasigoreng.html
+++ b/recipes/nasigoreng.html
@@ -28,3 +28,4 @@
     <li>Remove and the special fried rice is ready to serve while warm.</li>
   </ol>
 </div>
+<a href="../index.html">Return to main page</a>
