Add another recipes item to index.html
Required more than one recipe, so add another 2 recipes items. Not yet implemented, but already written the template

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   </head>
   <body>
     <h1>Nusantara Recipes</h1>
-    <a href="./recipes/nasigoreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
+    <img src="./images/nusantara.jpg" alt="nusantara foods">
+    <h3>Collections of recipes from Nusantara Indonesia</h3>
+    <ul>
+      <li>
+        <a href="./recipes/nasigoreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
+      </li>
+
+      <!-- TODO -->
+      <!-- find another recipes -->
+      <li>
+        <a href="./recipes/nasigoreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
+      </li>
+      <li>
+        <a href="./recipes/nasigoreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
+      </li>
+    </ul>
   </body>
 </html>
