Rewrite 1/2 using proper text

--- a/recipes/nasigoreng.html
+++ b/recipes/nasigoreng.html
@@ -16,8 +16,8 @@
     <li>5 spring onions</li>
     <li>3 cloves of garlic</li>
     <li>1 teaspoon salt</li>
-    <li>1/2 teaspoon sugar</li>
-    <li>1/2 teaspoon shrimp paste</li>
+    <li>½ teaspoon sugar</li>
+    <li>½ teaspoon shrimp paste</li>
   </ul>
 </div>
 <div>
