--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <li>
         <a href="./recipes/nasigoreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
       </li>
-
+      <li>
+        <a href="./recipes/babikecap.html">Babi Kecap (Indonesian Braised Pork)</a>
+      </li>
+      
       <!-- TODO -->
       <!-- find another recipes -->
-      <li>
-        <a href="./recipes/nasigoreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
-      </li>
       <li>
         <a href="./recipes/nasigoreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
       </li>
