New pandanextract item
- add pandanextract.html to folder recipes/
- add new anchor to pandanextract.html in index.html
- add pandanextract.jpg to folder images/

--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
       <li>
         <a href="./recipes/babikecap.html">Babi Kecap (Indonesian Braised Pork)</a>
       </li>
-      
-      <!-- TODO -->
-      <!-- find another recipes -->
       <li>
-        <a href="./recipes/nasigoreng.html">Nasi Goreng (Indonesian Fried Rice)</a>
+        <a href="./recipes/pandanextract.html">Pandan Extract</a>
       </li>
     </ul>
   </body>
